# engine-sim-app

./: .gitignore  CLAUDE.md  Info.plist  PRIVACY_POLICY.html  performance-optimizations.txt
Components/: EngineAssembly.mtl  Piston - Exhaust.mtl
docs/: MR_CONFIG_REPORT.md
engine-simulator/: ContentView.swift  Engine3DView.swift  EngineWrapper.h  EngineWrapper.m  PrivacyInfo.xcprivacy  TileSurfApp.swift  engine-simulator-Bridging-Header.h  engine-simulator.entitlements  engine_simulatorApp.swift  engine_simulator_old.swift
engine-simulator.xcodeproj/: project.pbxproj
engine-simulator.xcworkspace/: contents.xcworkspacedata
engine-simulator/Community/: CommunityBrowserModel.swift  CommunityDetailSheet.swift  CommunityModels.swift  CommunityService.swift  CommunityTileView.swift  EngineDetailSections.swift  EnginePreview3DView.swift  EnginePreviewRenderer.swift  EnginePreviewScene.swift
engine-simulator/Controls/: BrakeView.swift  ControlsMenuView.swift  CustomTopBar.swift  CylinderControlView.swift  DamageMatrixView.swift  EcuMapStyle.swift  EcuTuningView.swift  EngineComponentIcons.swift  EngineControlsView.swift  EngineHealthView.swift  EngineSchematicView.swift  GaugeIcons.swift  GearShiftView.swift  HapticManager.swift  KeyboardController.swift  OBD2CodeService.swift  OBD2View.swift  SharedStyles.swift  SystemControlView.swift  ThrottleView.swift  UniversalGauge.swift
engine-simulator/DesignSystem/: DashLoader.swift  LampLens.swift  LaunchSplashView.swift  Theme.swift
engine-simulator/Engine/: EcuTuneModel.swift  EngineViewModel.swift  EngineWrapper.h  EngineWrapper.m
engine-simulator/Engine3DProcedural/: CamshaftGeometry.swift  ConnectingRodGeometry.swift  CrankshaftGeometry.swift  CylinderHeadGeometry.swift  Engine3DProceduralView.swift  EngineBlockGeometry.swift  EngineGeometryParams.swift  FanGeometry.swift  PistonGeometry.swift  PlatformColor.swift  ProceduralEngineAssembly.swift  ValveGeometry.swift  WristPinGeometry.swift
engine-simulator/EngineBuilder/: BuiltInEngineIds.swift  BuiltInEngineSpecs.swift  EngineLibrary.swift  EngineSpec.swift  EngineSpecValidator.swift  MRWriter.swift
engine-simulator/Extensions/: Color+Extension.swift  LinearGradient+Extension.swift  String+Normalizer.swift  (+1 more)
physics-simulation/engine-sim/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/assets/: _cap.mr  main.mr  test_flat4_builder.mr
physics-simulation/engine-sim/assets/engines/atg-video-2/: 00_geo_metro_g10.mr
physics-simulation/engine-sim/assets/engines/audi/: i5.mr
physics-simulation/engine-sim/assets/engines/bmw/: M52B28.mr
physics-simulation/engine-sim/assets/engines/chevrolet/: chev_truck_454.mr
physics-simulation/engine-sim/build-ios/: CMakeCache.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-debug/dependencies/submodules/csv-io/: Makefile
physics-simulation/engine-sim/build-ios-debug/dependencies/submodules/piranha/: Makefile  parser.auto.cpp  parser.auto.h  scanner.auto.cpp  scanner.auto.h
physics-simulation/engine-sim/build-ios-debug/dependencies/submodules/simple-2d-constraint-solver/: Makefile
physics-simulation/engine-sim/build-ios-sim/: CMakeCache.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-sim-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-sim-debug/dependencies/submodules/csv-io/: Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-sim-debug/dependencies/submodules/piranha/: Makefile  cmake_install.cmake  parser.auto.cpp  parser.auto.h  scanner.auto.cpp  scanner.auto.h
physics-simulation/engine-sim/build-ios-sim-debug/dependencies/submodules/simple-2d-constraint-solver/: Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-sim/dependencies/submodules/csv-io/: Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios-sim/dependencies/submodules/piranha/: Makefile  parser.auto.cpp  parser.auto.h  scanner.auto.cpp  scanner.auto.h
physics-simulation/engine-sim/build-ios-sim/dependencies/submodules/simple-2d-constraint-solver/: Makefile  cmake_install.cmake
physics-simulation/engine-sim/build-ios/dependencies/submodules/csv-io/: Makefile
physics-simulation/engine-sim/build-ios/dependencies/submodules/piranha/: Makefile  cmake_install.cmake  parser.auto.cpp  parser.auto.h  scanner.auto.cpp  scanner.auto.h
physics-simulation/engine-sim/build-ios/dependencies/submodules/simple-2d-constraint-solver/: Makefile
physics-simulation/engine-sim/dependencies/submodules/csv-io/: CMakeLists.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/dependencies/submodules/piranha/: CMakeLists.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/dependencies/submodules/piranha/include/: path.h
physics-simulation/engine-sim/dependencies/submodules/piranha/src/: path.cpp
physics-simulation/engine-sim/dependencies/submodules/simple-2d-constraint-solver/: CMakeLists.txt  Makefile  cmake_install.cmake
physics-simulation/engine-sim/dependencies/submodules/simple-2d-constraint-solver/include/: sparse_matrix.h
physics-simulation/engine-sim/es/objects/: objects.mr
physics-simulation/engine-sim/include/: combustion_chamber.h  engine.h  gas_system.h  ignition_module.h  intake.h  macOS_audio_unit.h  oscilloscope.h  oscilloscope_cluster.h  piston_engine_simulator.h  s_audio_file.h  simulator.h  synthesizer.h  thermal_system.h  vehicle.h
physics-simulation/engine-sim/scripting/include/: vehicle_node.h
physics-simulation/engine-sim/scripts/: build-for-xcode.sh
physics-simulation/engine-sim/src/: capture_main.cpp  combustion_chamber.cpp  convolution_filter.cpp  engine.cpp  gas_system.cpp  ignition_module.cpp  intake.cpp  macOS_audio_unit.cpp  main.cpp  oscilloscope.cpp  oscilloscope_cluster.cpp  piston_engine_simulator.cpp  s_audio_file.cpp  synthesizer.cpp  thermal_system.cpp  vehicle.cpp  vehicle_drag_constraint.cpp
(+81 files in other folders)
